<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AplEditorActivity" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Manager" />

            <EditText
                android:id="@+id/Manager"
                android:width="@dimen/max_apply_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:hint="@string/apply_manager" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Accountant" />

            <EditText
                android:id="@+id/FinancialStaff"
                android:width="@dimen/max_apply_width"
                android:hint="@string/apply_financial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amount" />

            <EditText
                android:id="@+id/Amount"
                android:width="@dimen/max_apply_width"
                android:hint="@string/apply_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Title" />

            <EditText
                android:id="@+id/Title"
                android:width="@dimen/max_apply_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/apply_title" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Details" />

            <EditText
                android:id="@+id/Detail"
                android:width="@dimen/max_apply_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/apply_detail" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/discard"
        android:width="90dp"
        android:height="45dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/apply"
        android:layout_alignBottom="@+id/apply"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/apply"
        android:onClick="onButtonClick"
        android:text="Discard" />

    <Button
        android:id="@+id/apply"
        android:width="90dp"
        android:height="45dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="90dp"
        android:onClick="onButtonClick"
        android:text="Apply" />

</RelativeLayout>